package cn.seecoder.campushelp.entity.enums;

/**
 * Demand status constants — replaces scattered string literals.
 */
public final class DemandStatus {
    private DemandStatus() {}

    public static final String OPEN = "OPEN";
    public static final String IN_PROGRESS = "IN_PROGRESS";
    public static final String COMPLETED = "COMPLETED";
    public static final String CANCELLED = "CANCELLED";
}
