@startuml
skinparam backgroundColor white
skinparam classBackgroundColor #FAFAFA
skinparam classBorderColor #333333
skinparam classFontSize 14
skinparam defaultFontSize 12
skinparam ArrowColor #555555
skinparam packageBackgroundColor #F5F5F5
skinparam titleFontSize 18
scale 1.3

title 校园互助平台 — 设计类图（核心实体及关系）

class User {
  - userId: Long
  - studentId: String
  - name: String
  - avatar: String
  - role: String
  - status: Integer
  --
  + register(req): User
  + login(id, pwd): LoginResponse
  + updateProfile(req): void
}

class UserAccount {
  - accountId: Long
  - userId: Long
  - password: String
  - pointsBalance: Integer
  - reputationScore: Double
  --
  + freeze(amount): void
  + unfreeze(amount): void
  + recalcReputation(): void
}

class Demand {
  - demandId: Long
  - publisherId: Long
  - acceptorId: Long
  - type: String
  - title: String
  - description: String
  - status: DemandStatus
  - rewardType: RewardType
  - rewardAmount: Integer
  - attributes: JSON
  --
  + publish(req): DemandResponse
  + accept(userId): DemandResponse
  + complete(): void
  + cancel(): void
  + edit(req): DemandResponse
}

enum DemandStatus {
  OPEN
  IN_PROGRESS
  COMPLETED
  CANCELLED
}

enum BadgeDefinition {
  FIRST_PUBLISH
  FIRST_ACCEPT
  TEN_COMPLETES
  FIRST_FIVE_STAR
  HUNDRED_STARS
  CHECKIN_30
  HELPER
  FIRST_REPORT_SUCCESS
  EASTER_EGG
}

class UserBadge {
  - id: Long
  - userId: Long
  - badgeKey: BadgeDefinition
  - earnedAt: DateTime
  --
  + checkAndAward(userId, key): boolean
  + hasBadge(userId, key): boolean
}

class Evaluation {
  - evaluationId: Long
  - demandId: Long
  - evaluatorId: Long
  - targetId: Long
  - rating: Integer
  - content: String
  --
  + create(req): Evaluation
  + update(evalId, req): void
  + getReputation(userId): Double
}

class Report {
  - reportId: Long
  - reporterId: Long
  - targetType: String
  - targetId: Long
  - reason: String
  - status: ReportStatus
  - adminNote: String
  --
  + submit(req): Report
  + resolve(id, note): void
}

class Favorite {
  - id: Long
  - userId: Long
  - demandId: Long
  --
  + add(userId, demandId): void
  + remove(userId, demandId): void
}

User "1" -- "1" UserAccount : has >
User "1" -- "0..*" Demand : publishes >
User "1" -- "0..*" Evaluation : writes >
User "1" -- "0..*" UserBadge : earns >
User "1" -- "0..*" Report : submits >
User "1" -- "0..*" Favorite : bookmarks >

Demand "1" *-- "1..*" DemandStatus : has >
Demand "1" -- "0..1" Evaluation : receives >
Report "1" -- "1" Demand : targets >
Favorite "1" -- "1" Demand : references >

@enduml
